[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pages/Main/tabs.gd" type="Script" id=1]
[ext_resource path="res://Pages/Main/main.gd" type="Script" id=2]
[ext_resource path="res://Assets/Themes/godot.tres" type="Theme" id=3]
[ext_resource path="res://Pages/Main/tab_body.gd" type="Script" id=4]
[ext_resource path="res://Pages/Main/Sidebar/Sidebar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Dialogs/CreateDialog.tscn" type="PackedScene" id=6]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel/VBox"]
self_modulate = Color( 0.72, 0.72, 0.72, 1 )
margin_right = 1024.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="HBox" type="HBoxContainer" parent="Panel/VBox"]
margin_top = 60.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sidebar" parent="Panel/VBox/HBox" instance=ExtResource( 5 )]

[node name="VBox" type="VBoxContainer" parent="Panel/VBox/HBox"]
margin_left = 244.0
margin_right = 1024.0
margin_bottom = 540.0
size_flags_horizontal = 3
custom_constants/separation = 1

[node name="Tabs" type="Tabs" parent="Panel/VBox/HBox/VBox"]
margin_right = 780.0
margin_bottom = 24.0
tab_align = 0
tab_close_display_policy = 2
drag_to_rearrange_enabled = true
script = ExtResource( 1 )

[node name="TabBody" type="PanelContainer" parent="Panel/VBox/HBox/VBox"]
visible = false
margin_top = 25.0
margin_right = 780.0
margin_bottom = 540.0
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="WindowDialog" parent="." instance=ExtResource( 6 )]

[connection signal="gui_input" from="Panel/VBox/HBox/VBox/Tabs" to="Panel/VBox/HBox/VBox/Tabs" method="_on_tabs_gui_input"]
[connection signal="reposition_active_tab_request" from="Panel/VBox/HBox/VBox/Tabs" to="Panel/VBox/HBox/VBox/Tabs" method="_on_reposition_active_tab_request"]
[connection signal="tab_changed" from="Panel/VBox/HBox/VBox/Tabs" to="Panel/VBox/HBox/VBox/Tabs" method="_on_tab_changed"]
[connection signal="tab_close" from="Panel/VBox/HBox/VBox/Tabs" to="Panel/VBox/HBox/VBox/Tabs" method="_on_tab_close"]
[connection signal="tab_hover" from="Panel/VBox/HBox/VBox/Tabs" to="Panel/VBox/HBox/VBox/Tabs" method="_on_tab_hover"]
